# low-latency-exchange

./: .gitignore  CMakeLists.txt  README copy.txt
TradingEngine/src/: server.cpp
TradingEngine/src/logger/: logging_util.cpp  logging_util.h
TradingEngine/src/market_publisher/: market_publisher.h
TradingEngine/src/message_parser/: message_parser.cpp
TradingEngine/src/orderbook/: Order.h  OrderBook.cpp  OrderBook.h
TradingEngine/src/udpsocket/: UDPSocket.cpp
TradingEngine/src/utils/: OptMemPool.h  macros.h
low_latency_exchange/low_latency_exchange/: Dockerfile
src/: client.cpp
src/logger/: logging.h
src/market_publisher/: market_data.h  market_publisher.cpp
src/matching_engine/: matching_engine.cpp  matching_engine.h
src/message_parser/: message_parser.h
src/orderbook/: OrdersAtPrice.cpp  OrdersAtPrice.h
src/udpsocket/: UDPSocket.h
src/utils/: ErrorCategoryCache.h  Types.h  thread_utils.h
